<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChurchHub</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="logo_description">Logo</string>
    <string name="map_description">Map Icon</string>
    <string name="nearest">Nearest Church</string>
    <string name="roboto_th">Roboto Th</string>
    <string name="recent_opt">History</string>
    <string name="stats_opt">Stats</string>
    <string name="browse_opt">Browse</string>
    <string name="church_name">GKMI Bukit Hermon</string>
    <string name="church_address">Jl. Melati Ali Baba Blok 1A</string>
    <string name="link_to_open_in_map">Link to open in map</string>
    <string name="worship_time">17:00</string>
    <string name="next_worship">Next Worship</string>
    <string name="attend">Attend</string>
    <string name="worship_speaker">Pdt. Hariandja</string>
    <string name="title_activity_church">ChurchActivity</string>
    <string name="denomination_message_dialog">Choose denomination</string>
    <string name="add_denomination_message_dialog">Fill the denomination information</string>
    <string name="add_denomination_message_p">Submit</string>
    <string name="add_denomination_message_n">Cancel</string>
    <string name="logout_message_dialog">Are you sure want to logout?</string>
    <string name="signup_message_dialog">Please insert your registration info</string>
    <string name="login_message_dialog">Please insert username and password</string>
    <string name="login_message_p">Login</string>
    <string name="signup">Sign Up</string>
    <string name="login_message_n">Cancel</string>
    <string name="attend_message_dialog">Put message to your attendance</string>
    <string name="attend_message_p">Attend</string>
    <string name="attend_message_n">Cancel</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="country_name">Country Name</string>
    <string name="iso_code">ISO Code</string>
    <string name="worship_name">Worship Name</string>
    <string name="start_time_eg_8_30">Start time eg. 8:30</string>
    <string name="end_time_eg_11_30">End time eg. 11:30</string>
    <string name="worship_day_eg_sunday">Worship Day, eg. Sunday</string>

    <string-array name="browse_choice">
        <item>Denomination</item>
        <item>Region</item>
    </string-array>

    <string name="title_activity_browse_denomination">Denomination</string>
    <string name="add_denomination">Add denomination</string>
    <string name="title_activity_browse_church">BrowseChurchActivity</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="title_activity_browse_country">BrowseCountryActivity</string>
    <string name="title_activity_nearest_church">NearestChurchActivity</string>
    <string name="title_activity_add_new_church">Add New Church</string>
    <string name="title_activity_browse_worship">BrowseWorshipActivity</string>
    <string name="title_activity_recent_attending">RecentAttendingActivity</string>
    <string name="speaker">Speaker</string>
    <string name="theme">Theme</string>
    <string name="nats">Nats</string>
    <string name="add_worship">Add Worship</string>
    <string name="email">Email address</string>
    <string name="activity">Activity</string>
    <string name="radius">Radius</string>
    <string name="todays_worship">Today\'s worship</string>
    <string name="worship_theme">Membangun kerajaan Allah</string>

</resources>