<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout2" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/worship_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/worship_time"
            android:textColor="@color/church_title_color"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:orientation="vertical"
            android:padding="@dimen/small_padding" >

            <TextView
                android:id="@+id/worship_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worship_name"
                android:textSize="@dimen/header_footer_left_right_padding" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worship_theme"
                android:textSize="@dimen/subtitle_list_size" />

            <TextView
                android:id="@+id/worship_speaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worship_speaker"
                android:textColor="@color/church_worship_speaker_color"
                android:textSize="@dimen/subtitle_list_size" />

        </LinearLayout>
    </LinearLayout>

