<?xml version="1.0" encoding="utf-8"?>
<com.agimind.widget.SlideHolder  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"        
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sideView1"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        >

		<Button
		    android:id="@+id/login"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
		    />
		<Button
		    android:id="@+id/signup"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/signup"
		    />
	</LinearLayout>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	        <RelativeLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            xmlns:tools="http://schemas.android.com/tools"
	            android:layout_width="match_parent"
	            android:layout_height="517dp"
	            tools:context=".MainActivity" >

	            <ImageView
	                android:id="@+id/imageView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_alignParentTop="true"
	                android:contentDescription="@string/logo_description"
	                android:src="@drawable/logo" />

	            <Button
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignLeft="@+id/textView1"
	                android:layout_alignParentRight="true"
	                android:layout_below="@+id/textView4"
	                android:background="@color/stats_opt_color"
	                android:drawableLeft="@drawable/stats"
	                android:drawablePadding="10dp"
	                android:fontFamily="@string/roboto_th"
	                android:padding="15dp"
	                android:text="@string/stats_opt"
	                android:textColor="@color/church_worship_attend_box_color"
	                android:textSize="@dimen/menu_font_size"
	                android:textStyle="italic" />

	            <Button
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_alignRight="@+id/textView4"
	                android:layout_below="@+id/textView3"
	                android:background="@color/browse_opt_color"
	                android:drawablePadding="10dp"
	                android:drawableRight="@drawable/browse"
	                android:fontFamily="@string/roboto_th"
	                android:padding="15dp"
	                android:text="@string/browse_opt"
	                android:textColor="@color/church_title_box_color"
	                android:textSize="@dimen/menu_font_size"
	                android:textStyle="italic" />

	            <Button
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_alignRight="@+id/imageView1"
	                android:layout_below="@+id/textView1"
	                android:background="@color/recent_opt_color"
	                android:drawablePadding="10dp"
	                android:drawableRight="@drawable/recent"
	                android:fontFamily="@string/roboto_th"
	                android:padding="15dp"
	                android:text="@string/recent_opt"
	                android:textColor="@color/stats_opt_color"
	                android:textSize="@dimen/menu_font_size"
	                android:textStyle="italic" />

	            <Button
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_below="@+id/imageView1"
	                android:layout_marginTop="46dp"
	                android:background="@color/nearest_opt_color"
	                android:drawableLeft="@drawable/map"
	                android:drawablePadding="10dp"
	                android:fontFamily="@string/roboto_th"
	                android:padding="15dp"
	                android:text="@string/nearest"
	                android:textColor="@color/church_worship_speaker_color"
	                android:textSize="@dimen/menu_font_size"
	                android:textStyle="italic"
	                android:typeface="normal" />
	        </RelativeLayout>
	</ScrollView>
</com.agimind.widget.SlideHolder>