<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/worship_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ibadah pembuka"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/worship_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Senin, 8 September 2013, 09:30"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/speaker"
        android:inputType="text" />

    <EditText
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/theme"
        android:inputType="text" />

    <EditText
        android:id="@+id/nats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nats"
        android:inputType="text" />
    

</LinearLayout>